Minor style changes added

--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,9 @@
                     <md-button aria-label="Ingresar" ng-click="controller.login()" style="text-align:left; margin-right: 1%">
                         {{userName}} <md-icon md-svg-icon="img/icons/login.svg"></md-icon>
                     </md-button>
-                    <div style="height: 64px; background-color: white; vertical-align: middle; width: 344.5px">
+                    <div style="height: 64px; background-color: white; vertical-align: middle; width: 344.5px" class="hidden-sm hidden-xs">
                         <a href="http://www.univalle.edu.co/">
-                            <img class="logo-img-responsive hidden-sm hidden-xs" alt="Universidad del Valle" src="img/logo-univalle.png" style="margin: 3%; max-width: 325px;">
+                            <img class="logo-img-responsive" alt="Universidad del Valle" src="img/logo-univalle.png" style="margin: 3%; max-width: 325px;">
                         </a>
                     </div>
                 </div>
