--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
         <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
+        <!-- Notifications styles -->
+        <link rel="stylesheet" href="css/angular-ui-notification.min.css">
         <!-- Application styles -->
         <link rel="stylesheet" href="css/styles.min.css">
         <link rel="stylesheet" href="css/main.css" >
@@ -60,6 +62,8 @@
         <!-- Animation scripts -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
         <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav@1.3.2/dist/bootstrap-better-nav.min.js"></script>
+        <!-- Notifications script -->
+        <script src="js/lib/angular-ui-notification.min.js"></script>
         <!-- App Controllers -->
         <script src="js/controllers/MainController.js"></script>
         <script src="js/controllers/DashboardController.js"></script>
