Functions error fixed. Some styles added

--- a/public/index.html
+++ b/public/index.html
@@ -39,13 +39,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
         <script src="js/lib/angular-popover.min.js"></script>
         <!-- Firebase -->
-        <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-database.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-storage.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-messaging.js"></script>
-        <script src="js/firebase-init.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+        <!-- <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-storage.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-messaging.js"></script> -->
+        <script src="js/firebase-config.js"></script>
         <!-- Angular Firebase -->
         <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
         <!-- d3 -->
