Some changes added to save button functionality

--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
         <script src="js/lib/angular-popover.min.js"></script>
         <!-- Firebase -->
-        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
-        <!-- <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-database.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-storage.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-messaging.js"></script> -->
+        <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-storage.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-messaging.js"></script>
         <script src="js/firebase-config.js"></script>
         <!-- Angular Firebase -->
         <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
@@ -219,7 +219,7 @@
             </div>
             <!-- Footer -->
             <div class="footer" ng-cloak>
-                <p class="text-center" style="padding:0;margin:0;">SIGETec - Versión en desarrollo (v05.2018). &nbsp;<a href="http://viceinvestigaciones.univalle.edu.co/universidad-empresa-otri">Oficina de Transferencia de Resultados de Investigación (OTRI)</a>&nbsp;<br></p>
+                <p class="text-center" style="padding:0;margin:0;">SIGETec - Versión en desarrollo (v06.2018). &nbsp;<a href="http://viceinvestigaciones.univalle.edu.co/universidad-empresa-otri">Oficina de Transferencia de Resultados de Investigación (OTRI)</a>&nbsp;<br></p>
             </div>
         </div>
     </body>
