Many bug fixes added. Styles much more worked

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
         <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
         <!-- Notifications styles -->
         <link rel="stylesheet" href="css/angular-ui-notification.min.css">
+        <!-- Md-data-table styles -->
+        <link rel="stylesheet" href="css/md-data-table.min.css">
         <!-- Application styles -->
         <link rel="stylesheet" href="css/styles.min.css">
         <link rel="stylesheet" href="css/main.css" >
@@ -59,6 +61,8 @@
         <script src="js/lib/ng-google-signin.min.js"></script>
         <!-- UUID generator -->
         <script src="js/lib/angular-uuid2.min.js"></script>
+        <!-- Md-data-table -->
+        <script src="js/lib/md-data-table.min.js"></script>
         <!-- Animation scripts -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
         <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav@1.3.2/dist/bootstrap-better-nav.min.js"></script>
@@ -219,7 +223,7 @@
             </div>
             <!-- Footer -->
             <div class="footer" ng-cloak>
-                <p class="text-center" style="padding:0;margin:0;">SIGETec - Versión en desarrollo (v06.2018). &nbsp;<a href="http://viceinvestigaciones.univalle.edu.co/universidad-empresa-otri">Oficina de Transferencia de Resultados de Investigación (OTRI)</a>&nbsp;<br></p>
+                <p class="text-center" style="padding:0;margin:0;">SIGETec - Versión en desarrollo (v07.2018). &nbsp;<a href="http://viceinvestigaciones.univalle.edu.co/universidad-empresa-otri">Oficina de Transferencia de Resultados de Investigación (OTRI)</a>&nbsp;<br></p>
             </div>
         </div>
     </body>
