--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,15 @@
         <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
         <!-- Notifications styles -->
         <link rel="stylesheet" href="css/angular-ui-notification.min.css">
-        <!-- Md-data-table styles -->
-        <link rel="stylesheet" href="css/md-data-table.min.css">
+        <!-- JQuery datatable style sheet -->
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
         <!-- Application styles -->
         <link rel="stylesheet" href="css/styles.min.css">
         <link rel="stylesheet" href="css/main.css" >
         <!-- JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- JQuery datatable -->
+        <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
         <!-- Angular -->
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-animate.min.js"></script>
@@ -41,6 +43,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-messages.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-resource.min.js"></script>
+        <!-- Angular datatables -->
+        <script src="js/lib/angular-datatables.min.js"></script>
         <!-- Angular Material Library -->
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.4/angular-material.min.js"></script> -->
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
@@ -69,8 +73,6 @@
         <script src="js/lib/ng-google-signin.min.js"></script>
         <!-- UUID generator -->
         <script src="js/lib/angular-uuid2.min.js"></script>
-        <!-- Md-data-table -->
-        <script src="js/lib/md-data-table.min.js"></script>
         <!-- Animation scripts -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
         <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav@1.3.2/dist/bootstrap-better-nav.min.js"></script>
@@ -146,7 +148,7 @@
                                 <div class="container-fluid"><a class="navbar-brand" href="#" data-aos="fade-right" data-aos-delay="200" data-aos-once="true" id="navbarLogo"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                                     <div class="collapse navbar-collapse" id="navcol-1">
                                         <ul class="nav navbar-nav ml-auto" style="margin-right:5%;font-size:13px;">
-                                            <li class="nav-item" role="presentation" id="navAbout" style="color:#D51B23 !important;">   <a class="nav-link" href="#" onclick="return false;" ng-show="!isLoggedin">Acerca de SIGETec</a>
+                                            <li class="nav-item" role="presentation" id="navAbout" style="color:#D51B23 !important;">   <a class="nav-link" href="#" onclick="return false;" ng-show="!isLoggedin">Tecnologías registradas en SIGETec</a>
                                             </li>
                                             <li class="nav-item" role="presentation" id="navContact">
                                                 <a class="nav-link" href="#" onclick="return false;" ng-show="!isLoggedin">Contacto</a>
