Sidebar and backdrop fixed once again

--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
             <div layout="column" class="appContent" ng-cloak>
                 <section layout="row" flex>
                     <!-- Navigation left sidebar -->
-                    <md-sidenav class="md-sidenav-left" md-component-id="mainMenu" md-whiteframe="4">
+                    <md-sidenav class="md-sidenav-left" md-component-id="mainMenu" md-whiteframe="4" style="position: fixed">
                         <md-toolbar class="md-theme-indigo">
                             <h1 class="md-toolbar-tools">
                                 <img src="img/SIGETEC_Logo.jpg" class="hidden-sm hidden-xs" alt="SIGETEC" style="margin: 10%; max-height: 64px; max-width: 150px;">
