--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,8 @@
         <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-database.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-storage.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-messaging.js"></script>
-        <script src="js/firebase-config.js"></script>
+        <!-- Firebase config file -->
+        <script src="js/config/firebase-config.js"></script>
         <!-- Angular Firebase -->
         <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
         <!-- d3 -->
@@ -78,6 +79,8 @@
         <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav@1.3.2/dist/bootstrap-better-nav.min.js"></script>
         <!-- Notifications script -->
         <script src="js/lib/angular-ui-notification.min.js"></script>
+        <!-- Api routes config file -->
+        <script src="js/config/api-points.js"></script>
         <!-- App Controllers -->
         <script src="js/controllers/MainController.js"></script>
         <script src="js/controllers/DashboardController.js"></script>
