minor changes to home topbar styles

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
                 </div>
             </md-toolbar>
             <!-- UV Home Top navbar -->
-            <md-toolbar id="header" class=md-hue-2 ng-show="!isLoggedin" ng-cloak>
+            <md-toolbar id="header" class=md-hue-2 ng-show="!isLoggedin" ng-cloak style="border-bottom: none !important; box-shadow: none !important">
                 <div id="topDiv">
                     <div class="row" id="uvTopbar">
                         <div class="col-auto col-12 col-xs-12 col-sm-12o col-md-auto">
