--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,9 @@
         <script src="js/lib/collapsibleDirective.min.js"></script>
         <!-- Api routes config file -->
         <script src="js/config/api-points.js"></script>
+        <!-- PDF Generator -->
+        <script type="text/javascript" src="./js/lib/pdfmake.js"></script>
+        <script type="text/javascript" src="./js/lib/vfs_fonts.js"></script>
         <!-- App Controllers -->
         <script src="js/controllers/MainController.js"></script>
         <script src="js/controllers/DashboardController.js"></script>
@@ -201,26 +204,26 @@
                             </md-list-item>
                             <md-list-item ng-if="userRoles.indexOf('admin') >= 0" class="md-2-line" ng-click="controller.showTechnologies()">
                                 <div class="md-list-item-text" layout="column">
-                                    <h3>Tecnologias</h3>
-                                    <p>Listado de tecnologias.</p>
+                                    <h3>Todas las tecnologias</h3>
+                                    <p>Listado de tecnologias</p>
                                 </div>
                             </md-list-item>
                             <md-list-item ng-if="userRoles.indexOf('admin') >= 0" class="md-2-line" ng-click="controller.showReports()">
                                 <div class="md-list-item-text" layout="column">
                                     <h3>Informes</h3>
-                                    <p>Listado de informes.</p>
+                                    <p>Listado de informes</p>
                                 </div>
                             </md-list-item>
                             <md-list-item class="md-2-line" ng-click="controller.showDashboard()">
                                 <div class="md-list-item-text" layout="column">
                                     <h3>Dashboard</h3>
-                                    <p>Tablero de control.</p>
+                                    <p>Tablero de control</p>
                                 </div>
                             </md-list-item>
                             <md-list-item class="md-2-line" ng-click="controller.closeSession()">
                                 <div class="md-list-item-text" layout="column">
                                     <h3>Cerrar sesión</h3>
-                                    <p>Cierra tu sesión de usuario aquí.</p>
+                                    <p>Cierra tu sesión de usuario aquí</p>
                                 </div>
                             </md-list-item>
                         </md-content>
