Help button added to text-kind fields

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,6 @@
         <script src="js/controllers/ReportController.js"></script>
         <script src="js/app.js"></script>
     </head>
-    
     <body>
         <div ng-controller="MainController as controller">
             <!-- Application Top navbar -->
@@ -179,8 +178,8 @@
                     <!-- Navigation left sidebar -->
                     <md-sidenav class="md-sidenav-left" md-component-id="mainMenu" md-whiteframe="4" style="position: fixed">
                         <md-toolbar class="md-theme-indigo">
-                            <h1 class="md-toolbar-tools">
-                                <img src="img/SIGETEC_Logo.jpg" class="hidden-sm hidden-xs" alt="SIGETEC" style="margin: 10%; max-height: 64px; max-width: 150px;">
+                            <h1 class="md-toolbar-tools" style="display:flex">
+                                <img src="img/SIGETEC_Logo.jpg" class="hidden-sm hidden-xs" alt="SIGETEC" style="margin: auto; max-height: 64px; max-width: 150px;">
                             </h1>
                         </md-toolbar>
                         <md-content layout-margin>
